--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,14 @@
+
 @import url(https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700;800&family=Rubik:wght@300;400;500;600&display=swap);
 
+
+/* VARIAVEIS DE CORES E PADROES DE FONTES*/
 :root {
-    --primary-color: #ff6b6b;
-    --secondary-color: #794afa;
+    --backgound-color: #1B2838;
+    --primary-color: #396886;
+    --secondary-color: #3E6E8C;
     --secondary-dark-color: #453c5c;
+    --text-primary-color:#3F8EDC;
 
     --white-color: #ffffff;
     --light-bg-color: #f2f3f5;
@@ -27,4 +32,35 @@
     --trans-background: background-color .3s;
     --trans-color: color .3s;
 
+}
+.container{
+    max-width: 1280px;
+    margin: 0 auto;
+    padding: 0 0.938em;
+}
+
+.flexitem{
+    display: flex;
+    align-items: center;
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+ul{
+    text-decoration: none;
+}
+.main-links a:hover{
+    color: #3E6E8C;
+}
+
+.icon-small{
+    display: flex;
+    align-items: center;
+    padding: 0 0.25em;
+    font-weight: normal;
+    font-size: 1.25em;
+    margin: auto;
 }
