--- a/Albatroz/css/Recuperar.css
+++ b/Albatroz/css/Recuperar.css
@@ -3,12 +3,12 @@
 */
 
 :root {
-    --main-color: #407bff;
+    --main-color: #4d4fe4;
     --link-color: #eee7e7;
-    --text1: #999999;
+    --text1: #0f0;
     --highligth-text: #0f0;
     --input-text: #ffffff;
-    --white-color: #353232;
+    --white-color: #000;
     --point-list: #CCCCCC;
     --line-input: #0f0;
     --background-color: black;
