--- a/Albatroz/css/index.css
+++ b/Albatroz/css/index.css
@@ -50,6 +50,7 @@ body{
 }
 
 
+
 .header-main{
     background-color: var(--secondary-dark-color);
     padding: 1.5em 0;
@@ -84,6 +85,10 @@ body{
 .header-nav{
     background: linear-gradient(90deg, #1b2839 60%, #1b2839 40.1%);
 }
+.dpt-menu{
+    background-color: #1b2839;
+}
+
 
 
 .dpt-menu > ul > li > a {
@@ -156,7 +161,7 @@ form.search button:hover{
     position: fixed;
     width: 320px;
     height: var(--percent100);
-    background-color: var(--white-color);
+    background-color: #1b2839;
     overflow-y: auto;
     z-index: 1000;
     transform: translateX(-100%);
@@ -310,6 +315,7 @@ a{
 .flexitem{
     display: flex;
     align-items: center;
+    
 }
 .flexcol{
     display: flex;
@@ -1025,14 +1031,10 @@ section{
 }
 .down i:hover{
     background-color: #2c2c2c;
-    color: #fff;
+    color: #1b2839;
     transition: all .42s ease;
 }
-header.sticky{
-    background: #fff;
-    padding: 20px 10%;
-    box-shadow: 0px 0px 10px rgb(0 0 0 / 10%);
-}
+
 
 /* trending-section-css */
 .center-text h2{
