Atualização index.html

--- a/Albatroz/css/index.css
+++ b/Albatroz/css/index.css
@@ -1079,7 +1079,7 @@ section{
 }
 .heart-icon{
     position: absolute;
-    right: 0;
+    right: 70px;
     font-size: 20px;
 }
 .heart-icon:hover{
