--- a/Albatroz/css/Recuperar.css
+++ b/Albatroz/css/Recuperar.css
@@ -1,306 +1,166 @@
-/*
-  Variáveis
-*/
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Helvetica, sans-serif;
+  color:rgba(239, 245, 239, 0.942);
+  border: none;
+}
 
-:root {
-    --main-color: #4d4fe4;
-    --link-color: #eee7e7;
-    --text1: #0f0;
-    --highligth-text: #0f0;
-    --input-text: #ffffff;
-    --white-color: #000;
-    --point-list: #CCCCCC;
-    --line-input: #0f0;
-    --background-color: black;
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background-color: #000;
+}
+section{
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2px;
+  flex-wrap: wrap;
+  overflow: hidden;
+}
+
+section::before{
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(#000, #17664E, #000);
+  animation: animate 5s linear infinite;
+}
+
+@keyframes animate {
+  0%{
+      transform: translateY(-100%);
   }
-  
-  /*
-    Fontes
-  */
-  
-  @font-face {
-    font-family: Poppins-Regular;
-    src: url('../fonts/poppins/Poppins-Regular.ttf'); 
+  100%{
+      transform: translateY(100%);
   }
-  
-  @font-face {
-    font-family: Poppins-Medium;
-    src: url('../fonts/poppins/Poppins-Medium.ttf'); 
-  }
-  
-  @font-face {
-    font-family: Poppins-Bold;
-    src: url('../fonts/poppins/Poppins-Bold.ttf'); 
-  }
-  
-  @font-face {
-    font-family: Poppins-SemiBold;
-    src: url('../fonts/poppins/Poppins-SemiBold.ttf'); 
-  }
-  
-  /*
-    Zerar estilos
-  */
-  
-  * {
-      margin: 0px; 
-      padding: 0px; 
-      box-sizing: border-box;
-  }
-  
-  body, html {
-      height: 100%;
-      font-family: Poppins-Regular, sans-serif;
-      background-color: black;
-  }
-  
-  ul, li {
-      margin: 0px;
-      list-style-type: none;
-  }
-  
-  input, button {
-      outline: none !important;
-      border: none;
-  }
-  
-  button:hover {
-      cursor: pointer;
-  }
-  
-  /*
-    Utilitários
-  */
-  
-  .text1 {
-    font-family: Poppins-Regular;
-    font-size: 15px;
-    color: var(--text1);
-    line-height: 1.5;
-  }
-  
-  .text2 {
-    font-family: Poppins-Regular;
-    font-size: 15px;
-    color: var(--main-color);
-    line-height: 1.5;
-  }
-  
-  .margin-bottom-35 {
-    margin-bottom: 35px;
-  }
-  
-  .margin-top-35 {
-    margin-top: 35px;
-  }
-  
-  .margin-bottom-8 {
-    margin-bottom: 8px;
-  }
-  
-  .margin-top-8 {
-    margin-top: 8px;
-  }
-  
-  .margin-left-50 {
-    margin-left: 50px;
-  }
-  
-  /*
-    Login
-  */
-  
-  .container {
-    width: 100%;
-    margin: 0 auto;
-  }
-  
-  .container-login {
-    width: 100%;  
-    min-height: 100vh;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    padding: 15px;
-    background: var(--white-color);  
-  }
-  
-  .wrap-login {
-    width: 370px;
-    margin-right: 50px;
-    background: var(--white-color);
-  }
-  
-  /*
-    Formulário
-  */
-  
-  .login-form {
-    width: 100%;
-  }
-  
-  .login-form-title {
-    display: block;
-    font-family: Poppins-Bold;
-    font-size: 39px;
-    color: var(--highligth-text);
-    line-height: 1.2;
-    text-align: center;
-  }
-  
-  /*
-    Input
-  */
-  
-  .wrap-input {
-    width: 100%;
-    position: relative;
-    border-bottom: 2px solid var(--line-input);
-  }
-  
-  .input-form {
-    font-family: Poppins-SemiBold;
-    font-size: 18px;
-    color: var(--input-text);
-    line-height: 1.2;
-    display: block;
-    width: 100%;
-    height: 52px;
-    background: transparent;
-    padding: 0 5px;
-  }
-  
-  .focus-input-form {
-    position: absolute;
-    display: block;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    pointer-events: none;
-  }
-  
-  .focus-input-form::before {
-    content: "";
-    display: block;
-    position: absolute;
-    bottom: -2px;
-    left: 0;
-    width: 0;
-    height: 2px;
-    transition: all 0.4s;
-    background: var(--main-color);
-  }
-  
-  .focus-input-form::after {
-    font-family: Poppins-Medium;
-    font-size: 18px;
-    color: var(--text1);
-    line-height: 1.2;
-    content: attr(data-placeholder);
-    display: block;
-    width: 100%;
-    position: absolute;
-    top: 15px;
-    left: 0px;
-    padding-left: 5px;
-    transition: all 0.4s;
-  }
-  
-  .input-form:focus + .focus-input-form::after {
-    top: -20px;
-    font-size: 15px;
-  }
-  
-  .input-form:focus + .focus-input-form::before {
-    width: 100%;
-  }
-  
-  .has-val.input-form + .focus-input-form::after {
-    top: -20px;
-    font-size: 15px;
-  }
-  
-  .has-val.input-form + .focus-input-form::before {
-    width: 100%;
-  }
-  
-  /*
-    Botão
-  */
-  
-  .container-login-form-btn {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-  }
-  
-  .login-form-btn {
-    font-family: Poppins-Medium;
-    font-size: 16px;
-    color: var(--white-color);
-    line-height: 1.2;
-    text-transform: uppercase;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 0 20px;
-    width: 100%;
-    height: 50px;
-    background-color: var(--main-color);
-    border-radius: 5px;
-    transition: all 0.4s;
-  }
-  
-  .login-form-btn:hover  {
-    background-color: var(--highligth-text);
-  }
-  
-  /*
-    Links - Login utils
-  */
-  
-  a {
-      font-family: Poppins-Regular;
-      font-size: 14px;
-      line-height: 1.7;
-      color: var(--link-color);
-      margin: 0px;
-      transition: all 0.4s;
-  }
-  
-  a:focus {
-      outline: none !important;
-  }
-  
-  a:hover {
-      text-decoration: none;
-    color: var(--highligth-text);
-  }
-  
-  /*
-    Login utils
-  */
-  
-  .login-utils {
-    margin-top: 20px;
-  }
-  
-  .login-utils li {
-    position: relative;
-    padding-left: 16px;
-  }
-  
-  .login-utils li::before {
-    content: "";
-    display: block;
-    position: absolute;
-    width: 5px;
-    height: 5px;
-    border-radius: 50%;
-    background-color: var(--point-list);
-    top: 45%;
-    transform: translateY(-50%);
-    left: 0;
-  }
+}
+
+span{
+  position: relative;
+  display:block;
+  width: calc(6.25vw - 2px);
+  height: calc(6.25vw - 2px);
+  background: #181818;
+  z-index: 2;
+  transition: 1.5s;
+}
+
+span:hover{
+  background: #0f0;
+  transition: 0s;
+}
+input{
+background-color: #333;
+border: 2px solid black;
+}
+
+input, label {
+  display: block;
+  outline: none;
+  width: 100%;
+}
+
+a {
+  color:rgb(242, 250, 242);
+}
+
+body {
+  background: linear-gradient(90deg, #1b2839 60%, #1b2839 40.1%);
+}
+
+/* form */
+#main-container {
+  position: absolute;
+  display: flex;
+  width: 500px;
+  z-index: 100;
+  background: #333;
+  border-radius: 10px;
+  padding: 25px;
+}
+
+#main-container h1 {
+  padding: 2px;
+  padding-left: 100px;
+  text-align: center;
+  font-size: 1.6rem;
+  color: #0f0;
+}
+
+form {
+
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.full-box {
+  flex: 1 1 100%;
+  position: relative;
+}
+
+.half-box {
+  flex: 1 1 45%;
+  position: relative;
+}
+
+.spacing {
+  margin-right: 2.5%;
+}
+
+label {
+  padding-bottom: 2px;
+  font-weight: bold;
+  font-size: .8rem;
+}
+
+input {
+  border-bottom: 2px solid black;
+  padding: 10px;
+  font-size: .9rem;
+  margin-bottom: 40px;
+}
+
+input:focus {
+  border-color: black;
+}
+
+input[type="submit"] {
+  background-color:rgb(66, 92, 137);
+  color:rgb(242, 253, 242);
+  border: none;
+  border-radius: 10px;
+  height: 40px;
+  width: 130px;
+  margin-left: 155px;
+  cursor: pointer;
+}
+
+#agreement {
+  margin-right: 5px;
+}
+
+#agreement, #agreement-label {
+  display: inline-block;
+  width: auto;
+}
+
+.error-validation {
+  color:rgb(249, 245, 245);
+  position: absolute;
+  top: 57px;
+  font-size: 12px;
+}
+
+.template {
+  display: none;
+}
