--- a/Albatroz/css/cadastro.css
+++ b/Albatroz/css/cadastro.css
@@ -6,6 +6,62 @@
     color:rgba(239, 245, 239, 0.942);
     border: none;
   }
+
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    background-color: #000;
+}
+section{
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2px;
+    flex-wrap: wrap;
+    overflow: hidden;
+}
+
+section::before{
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(#000, #17664E, #000);
+    animation: animate 5s linear infinite;
+}
+
+@keyframes animate {
+    0%{
+        transform: translateY(-100%);
+    }
+    100%{
+        transform: translateY(100%);
+    }
+}
+
+span{
+    position: relative;
+    display:block;
+    width: calc(6.25vw - 2px);
+    height: calc(6.25vw - 2px);
+    background: #181818;
+    z-index: 2;
+    transition: 1.5s;
+}
+
+span:hover{
+    background: #0f0;
+    transition: 0s;
+}
+input{
+  background-color: #333;
+  border: 2px solid black;
+}
   
   input, label {
     display: block;
@@ -18,30 +74,30 @@
   }
   
   body {
-    padding-top: 5vh;
     background: linear-gradient(90deg, #1b2839 60%, #1b2839 40.1%);
-    background-size: cover;
-    background-position-y: -150px;
-
   }
   
   /* form */
   #main-container {
+    position: absolute;
+    display: flex;
     width: 500px;
-    margin-left: auto;
-    margin-right: auto;
-    background-color: #5367a2f6;
+    z-index: 100;
+    background: #333;
     border-radius: 10px;
     padding: 25px;
   }
   
   #main-container h1 {
+    padding: 2px;
+    padding-left: 150px;
     text-align: center;
-    margin-bottom: 25px;
     font-size: 1.6rem;
+    color: #0f0;
   }
   
   form {
+
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -67,14 +123,14 @@
   }
   
   input {
-    border-bottom: 2px solid #e8e1e1;
+    border-bottom: 2px solid black;
     padding: 10px;
     font-size: .9rem;
     margin-bottom: 40px;
   }
   
   input:focus {
-    border-color:rgb(215, 228, 228);
+    border-color: black;
   }
   
   input[type="submit"] {
