--- a/Albatroz/css/login.css
+++ b/Albatroz/css/login.css
@@ -135,7 +135,7 @@ input{
     width: 100%;
     padding: 5px 5px;
     display: inline-block;
-    border: 2px solid #0f0;
+    border: 2px solid black;
     outline: none;
     min-width: 180px;
     font-size: 16px;
@@ -145,7 +145,6 @@ input{
 
 .label-float{
     position: relative;
-    padding-top: 13px;
     margin-top: 5%;
     margin-bottom: 5%;
 }
@@ -173,44 +172,46 @@ input{
 }
 
 button{
-    border-color: #191174;
     color: white;
     padding: 7px;
-    background: black;
+    background:rgb(66, 92, 137);
     font-weight: bold;
     font-size: 12pt;
-    margin-top: 20px;
     border-radius: 4px;
     cursor: pointer;
     outline: none;
     transition: all .4s ease-out;
+    width: 200px;
 }
 
-button:hover{
-    background-color: rgb(0, 195, 255);
-    color: black;
-}
 
 .justify-center{
     display: flex;
     justify-content: center;
 }
 
+.senha{
+    padding-top: 5px;
+    color:rgb(242, 253, 242) ;
+    font-size: 0.7rem;
+    text-align: center;
+
+}
+
 p{
-    color: rgb(0, 195, 255);
-    font-size: 14pt;
+    color:rgb(242, 253, 242) ;
+    font-size: 1rem;
     text-align: center;
 }
 
 a{
-    color: #0f0;
+    color: rgb(242, 253, 242);
     font-weight: bold;
-    text-decoration: none;
     transition: all .3s ease-out;
 }
 
 a:hover{
-    color: rgb(0, 195, 255);
+    color: rgb(242, 250, 242);
 }
 
 .fa-eye{
@@ -218,7 +219,7 @@ a:hover{
     top: 6px;
     right: 1px;
     cursor: pointer;
-    color: rgb(0, 195, 255);
+    color: rgb(242, 250, 242);
 }
 
 
