--- a/pagina jogo/bully.css
+++ b/pagina jogo/bully.css
@@ -108,13 +108,16 @@ main{
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 110px;
-    height: 46px;
-    margin-top: 62px;
-    margin-left: 345px;
-    background-color: #4c6f9e;
-    border: 2px solid black;
+    width: 100px;
+    height: 40px;
+    margin-top: 52px;
+    margin-left: 300px;
+    background: linear-gradient(90deg, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
+    border: 1px solid black;
+    border-radius: 10px;
+    box-shadow: #92baee;
 }
+
 .preco2{
     display: flex;
     justify-content: center;
