--- a/pagina jogo/diablo 4.css
+++ b/pagina jogo/diablo 4.css
@@ -103,6 +103,18 @@ main{
     height: 264px;
     margin-left: 2.1rem;
 }
+.preco1{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 110px;
+    height: 40px;
+    margin-top: 105px;
+    margin-left: 190px;
+    background: linear-gradient(90deg, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
+    border: 1px solid black;
+    border-radius: 10px;
+}
 
 .preco{
     display: flex;
@@ -110,8 +122,8 @@ main{
     align-items: center;
     width: 100px;
     height: 40px;
-    margin-top: 52px;
-    margin-left: 300px;
+    margin-top: 96px;
+    margin-left: 31px;
     background: linear-gradient(90deg, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
     border: 1px solid black;
     border-radius: 10px;
@@ -124,8 +136,9 @@ main{
     align-items: center;
     width: 123px;
     height: 46px;
-    margin-top: 62px;
-    margin-left: 241px;
-    background-color: #4c6f9e;
-    border: 2px solid black;
+    margin-top: 98px;
+    margin-left: 227px;
+    background: linear-gradient(90deg, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
+    border-radius: 10px;
+    border: 1px solid black;
 }
