--- a/pagina jogo/gtav.css
+++ b/pagina jogo/gtav.css
@@ -110,21 +110,36 @@ main{
     align-items: center;
     width: 100px;
     height: 40px;
-    margin-top: 52px;
-    margin-left: 300px;
+    margin-top: -40px;
+    margin-left: 340px;
     background: linear-gradient(90deg, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
     border: 1px solid black;
     border-radius: 10px;
     box-shadow: #92baee;
 }
+
+.preco1{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100px;
+    height: 40px;
+    margin-top: 105px;
+    margin-left: 200px;
+    background: linear-gradient(90deg, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
+    border: 1px solid black;
+    border-radius: 10px;
+}
+
 .preco2{
     display: flex;
     justify-content: center;
     align-items: center;
     width: 110px;
     height: 46px;
-    margin-top: 62px;
-    margin-left: 241px;
-    background-color: #4c6f9e;
-    border: 2px solid black;
+    margin-top: 95px;
+    margin-left: 200px;
+    background: linear-gradient(90deg, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
+    border: 1px solid black;
+    border-radius: 10px;
 }
