--- a/pagina jogo/sexta13.css
+++ b/pagina jogo/sexta13.css
@@ -103,19 +103,29 @@ main{
     height: 264px;
     margin-left: 2.1rem;
 }
-
+.preco1{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100px;
+    height: 40px;
+    margin-top: 100px;
+    margin-left: 150px;
+    background: linear-gradient(90deg, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
+    border: 1px solid black;
+    border-radius: 10px;
+}
 .preco{
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100px;
     height: 40px;
-    margin-top: 52px;
-    margin-left: 300px;
+    margin-top: 100px;
+    margin-left: 40px;
     background: linear-gradient(90deg, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
     border: 1px solid black;
     border-radius: 10px;
-    box-shadow: #92baee;
 }
 
 .preco2{
