--- a/pagina jogo/zelda.css
+++ b/pagina jogo/zelda.css
@@ -103,6 +103,18 @@ main{
     height: 264px;
     margin-left: 2.1rem;
 }
+.preco1{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100px;
+    height: 40px;
+    margin-top: 100px;
+    margin-left: 10px;
+    background: linear-gradient(90deg, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
+    border: 1px solid black;
+    border-radius: 10px;
+}
 
 .preco{
     display: flex;
@@ -110,8 +122,8 @@ main{
     align-items: center;
     width: 100px;
     height: 40px;
-    margin-top: 52px;
-    margin-left: 300px;
+    margin-top: 100px;
+    margin-left: 50px;
     background: linear-gradient(90deg, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
     border: 1px solid black;
     border-radius: 10px;
